--- a/P4/index.html
+++ b/P4/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr>
     <head>
         <meta charset="UTF-8">
         <title>Main page</title>
     </head>
-    <body style='...'>
-        <h1>somethingR</h1>
-        <p>I don't know what to say</p>
+    <body style="background-color: yellow;">
+        <h1>MAIN PAGE</h1>
+        <p>This page contains links to the /blue and /pink pages</p>
+        <a href="blue.html">This is the link to the blue page<a/>
+        <p></p>
+        <a href="pink.html">This is the link to the pink page<a/>
+
     </body>
 </html>
