--- a/P4/index.html
+++ b/P4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Main page</title>
@@ -7,9 +7,8 @@
     <body style="background-color: yellow;">
         <h1>MAIN PAGE</h1>
         <p>This page contains links to the /blue and /pink pages</p>
-        <a href="blue.html">This is the link to the blue page<a/>
+        <a href="blue.html">This is the link to the blue page</a>
         <p></p>
-        <a href="pink.html">This is the link to the pink page<a/>
-
+        <a href="pink.html">This is the link to the pink page</a>
     </body>
 </html>
