--- a/P4/pink.html
+++ b/P4/pink.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr>
+<html lang="en"r>
     <head>
         <meta charset="UTF-8">
         <title>pink</title>
