--- a/P4/blue.html
+++ b/P4/blue.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>blue</title>
     </head>
-    <body style="background-color: yellow;">
+    <body style="background-color: lightblue;">
         <h1>BLUE PAGE</h1>
+        <p>Welcome to the blue page</p>
+        <a href="index.html">This is the link to the main page</a>
     </body>
 </html>
