Practice 5 error page fixed errors
Signed-off-by: clauhp <claudia8838@homail.es>

--- a/P5/error.html
+++ b/P5/error.html
@@ -6,6 +6,6 @@
     </head>
     <body style="background-color: red;">
         <h1>404 ERROR</h1>
-        <a href="index.html">This is the link to the main page</a>
+        <a href="/">This is the link to the main page</a>
     </body>
 </html>
