--- a/session-17/index.html
+++ b/session-17/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <title>API REST</title>
 </head>
-<body>
+<body style = "background-color: orange">
     <p>JSON Server. My API REST is: </p>
     <ul>
-        <li>GET listusers</a></li>
+        <li>GET listusers </a></li>
         <p>Get the list of all my users</p>
         <a href="listusers">Test</a>
     </ul>
