--- a/session-15/ex1-response.html
+++ b/session-15/ex1-response.html
@@ -6,7 +6,7 @@
                       </head>
                       <body>
                         <h1>Echo of the received message</h1>
-                        <p>cacacaca<p>
+                        <p>hello<p>
                         <a href="/">Main page</a>
                       </body>
                     </html>
