--- a/P6/response.html
+++ b/P6/response.html
@@ -2,11 +2,15 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>Echo Page</title>
+      <title>Sequence</title>
     </head>
     <body>
-      <h1>Echo of the received message</h1>
-      <p>hello<p>
+      <h1>Sequence analysis</h1>
+      <p>Sequence: gttttaaatcc</p>
+      <p></p>
+      <p>11</p>
+      <p></p>
+      <p>Operation perc on the T base: 45.5</p>
       <a href="/">Main page</a>
     </body>
   </html>ml>
